WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129518
Micro-optimize JSNodeOwner::isReachableFromOpaqueRoots().
https://bugs.webkit.org/show_bug.cgi?id=129518
Summary
Micro-optimize JSNodeOwner::isReachableFromOpaqueRoots().
Andreas Kling
Reported
2014-02-28 16:42:36 PST
We can reorder things a bit to avoid unnecessary work.
Attachments
Patch
(2.84 KB, patch)
2014-02-28 16:44 PST
,
Andreas Kling
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-02-28 16:44:18 PST
Created
attachment 225507
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-28 16:46:48 PST
Attachment 225507
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSNodeCustom.cpp:112: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] ERROR: Source/WebCore/bindings/js/JSNodeCustom.cpp:117: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2014-02-28 17:05:54 PST
Committed
r164900
: <
http://trac.webkit.org/changeset/164900
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug