Micro-optimize JSNodeOwner::isReachableFromOpaqueRoots(). <https://webkit.org/b/129518>

Only do image and audio element specific checks for element nodes.
Time spent in here goes from 0.8% to 0.5% on DYEB.

Reviewed by Benjamin Poulain.

* bindings/js/JSNodeCustom.cpp:
(WebCore::isReachableFromDOM):

Canonical link: https://commits.webkit.org/147580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164900 268f45cc-cd09-0410-ab3c-d52691b4dbfc